tests/src/frontend/typechecking/invalid/abstract_type_const2.sk
base class Foo {
  type T: Test.MixedScalar;
}

base class Bar {
  type T: Foo::T;
}
